force-app/main/default/objects/Company_Research__c/Company_Research__c.object-meta.xml
<CustomObject>
    <label>Company Research</label>
    <pluralLabel>Company Research</pluralLabel>
    <nameField>
        <displayFormat>RESEARCH-{0000}</displayFormat>
        <label>Research Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>