force-app/main/default/objects/Company_Research__c/fields/Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Company_Overview__c</fullName>
    <label>Company Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>