force-app/main/default/objects/Company_Research__c/fields/Culture_Insights__c.field-meta.xml
<CustomField>
    <fullName>Culture_Insights__c</fullName>
    <label>Culture Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>