force-app/main/default/objects/Company_Research__c/fields/Interview_Talking_Points__c.field-meta.xml
<CustomField>
    <fullName>Interview_Talking_Points__c</fullName>
    <label>Interview Talking Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>