force-app/main/default/objects/Company_Research__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Company Research</relationshipLabel>
    <relationshipName>Company_Research</relationshipName>
    <type>Lookup</type>
</CustomField>