force-app/main/default/objects/Company_Research__c/fields/Key_Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Key_Products_Services__c</fullName>
    <label>Key Products/Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>