force-app/main/default/objects/Company_Research__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Company Research</relationshipLabel>
    <relationshipName>Company_Research</relationshipName>
    <type>Lookup</type>
</CustomField>