force-app/main/default/objects/Company_Research__c/fields/Potential_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Potential_Challenges__c</fullName>
    <label>Potential Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>