force-app/main/default/objects/Company_Research__c/fields/Recent_News__c.field-meta.xml
<CustomField>
    <fullName>Recent_News__c</fullName>
    <label>Recent News</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>