force-app/main/default/objects/Company_Research__c/fields/Research_Date__c.field-meta.xml
<CustomField>
    <fullName>Research_Date__c</fullName>
    <label>Research Date</label>
    <type>DateTime</type>
</CustomField>