force-app/main/default/objects/Company_Research__c/fields/Research_Status__c.field-meta.xml
<CustomField>
    <fullName>Research_Status__c</fullName>
    <label>Research Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Outdated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>