force-app/main/default/objects/Company_Research__c/fields/Why_This_Company__c.field-meta.xml
<CustomField>
    <fullName>Why_This_Company__c</fullName>
    <label>Why This Company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>